# The-Storeman

./: .gitignore  7f5ae59b-908a-4866-96c6-7c9f57af4a91.csv  Cargo.toml  LICENSE  README.md  StoremanPro_Project_Proposal_UNCLASSIFIED.docx
crates/storeman-app/: Cargo.toml
crates/storeman-app/src/: main.rs
crates/storeman-app/src/ui/: app.rs  mod.rs  theme.rs
crates/storeman-app/src/ui/screens/: admin.rs  dashboard.rs  equipment_ref.rs  issue.rs  items.rs  login.rs  mod.rs  receive.rs  reports.rs  returns.rs  stocktake.rs
crates/storeman-app/src/ui/widgets/: mod.rs
crates/storeman-core/: Cargo.toml
crates/storeman-core/src/: error.rs  lib.rs
crates/storeman-core/src/audit/: chain.rs  mod.rs
crates/storeman-core/src/auth/: mod.rs  rbac.rs
crates/storeman-core/src/db/: migrations.rs  mod.rs
crates/storeman-core/src/models/: balance.rs  controlled.rs  custody.rs  equipment.rs  item.rs  location.rs  lot.rs  mod.rs  serial.rs  transaction.rs  user.rs
crates/storeman-core/src/reports/: templates.rs
crates/storeman-core/src/transactions/: adjust.rs  dispose.rs  issue.rs  mod.rs  receive.rs  returns.rs  stocktake.rs  transfer.rs
