[package]
name = "storeman-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storeman"
path = "src/main.rs"

[dependencies]
storeman-core = { path = "../storeman-core" }
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
